# honey-do

./: .gitignore  README.md  TODO.md
.claude/commands/: generate-doc.md  teach.md
backend/: .gitignore  Makefile  README.md  pyproject.toml
backend/create-task/: go.mod  go.sum  main.go
backend/detail-task/: go.mod  go.sum  main.go
backend/list-tasks/: go.mod  go.sum  main.go
backend/src/tasks/: create_task.py  delete_task.py  list.py  list_tasks.py
backend/test-events/: README.md  create-task.json  template.yaml
backend/test-events/create-task/: create-task.json
backend/test-events/list-tasks/: list-all-tasks.json
backend/tests/tasks/: test_list.py
client/: .prettierrc  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
client/src/: App.tsx  index.css  main.tsx
client/src/pages/: HomePage.tsx  SignInPage.tsx  SignUpPage.tsx  index.ts
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Button.tsx  Input.tsx  LoadingSpinner.tsx  Modal.tsx  ProtectedRoute.tsx  PublicRoute.tsx  StatusBadge.tsx  TaskCard.tsx  TaskCreateForm.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useAuth.ts  useTasks.ts
frontend/src/lib/: api.ts  cognito.ts  formatRelativeTime.ts
frontend/src/pages/: HomePage.tsx  SignInPage.tsx  (+1 more)
infrastructure/: .gitignore  README.md  deploy-client.sh  main.tf  outputs.tf  terraform.tf  variables.tf
infrastructure/environments/: dev.tfvars.example
(+23 files in other folders)
